# firework

./: .gitignore  Cargo.toml  biome-palette.json  biomes-palette.json  default-registry.txt  game_settings.json  palette.json  readme.md  server_image_base64.txt  tags.nbt  todo.txt
authentication/: Cargo.toml
authentication/src/: authentication.rs  lib.rs
benches/: my_benchmark.rs
data/: Cargo.toml
data/src/: data_1_19_2.rs  lib.rs  macros.rs
data/src/v1_19_2/: biomes.rs  blocks.rs  chunk.rs  data_structure.rs  mod.rs  tags.rs
data_types/src/: lib.rs  serializer.rs
firework/: Cargo.toml
firework-authentication/: Cargo.toml
firework-authentication/src/: lib.rs
firework-data/: Cargo.toml  registry.nbt  tags.nbt
firework-data/data/1.19.4/: items.json
firework-data/src/: biomes.rs  blocks.rs  items.rs  lib.rs  main.rs  tags.rs
firework-protocol/: Cargo.toml
firework-protocol/core/: Cargo.toml
firework-protocol/core/src/: lib.rs
firework-protocol/derive/: Cargo.toml
firework-protocol/derive/src/: deserialize.rs  lib.rs  serialize.rs
firework-protocol/src/: client_bound.rs  data_types.rs  lib.rs  server_bound.rs
firework-world/: Cargo.toml
firework-world/battle/cavern/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
firework-world/battle/cove/: r.-1.-2.mca  r.-1.1.mca  r.-2.-1.mca  r.-2.-2.mca  r.-2.0.mca  r.-2.1.mca  r.0.-2.mca  r.0.1.mca  r.1.-1.mca  r.1.-2.mca  r.1.0.mca  r.1.1.mca
firework-world/battle/crucible/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
firework-world/glide/canyon/: r.-1.-2.mca  r.-1.2.mca  r.-2.-1.mca  r.-2.-2.mca  r.-2.0.mca  r.-2.1.mca  r.-2.2.mca  r.0.-2.mca  r.0.2.mca  r.1.-1.mca  r.1.-2.mca  r.1.0.mca  r.1.1.mca  r.1.2.mca
firework-world/glide/cavern/: r.-1.-2.mca  r.-1.1.mca  r.-2.-1.mca  r.-2.-2.mca  r.-2.0.mca  r.-2.1.mca  r.0.-2.mca  r.0.1.mca  r.1.-2.mca  r.1.1.mca
firework-world/glide/temple/: r.-1.-2.mca  r.-1.2.mca  r.-2.-1.mca  r.-2.-2.mca  r.-2.0.mca  r.-2.1.mca  r.-2.2.mca  r.0.-2.mca  r.0.2.mca  r.1.-1.mca  r.1.-2.mca  r.1.0.mca  r.1.1.mca  r.1.2.mca
firework-world/src/: chunk.rs  lib.rs
firework-world/world-loader/: Cargo.toml
firework-world/world-loader/src/: lib.rs
firework/src/: client.rs  commands.rs  entities.rs  gui.rs  lib.rs
frontend/: hello.html  package-lock.json  package.json
frontend/src/: App.svelte  app.css  store.ts
lighting_engine/: Cargo.toml
lighting_engine/src/: lib.rs  lighting_engine.rs
minecraft-data/: Cargo.toml
minecraft-data/src/: blocks.rs  lib.rs  main.rs
minecraft_data/: Cargo.toml
minecraft_data/src/: biomes.rs  blocks.rs  items.rs  lib.rs  main.rs
protocol/: Cargo.toml
protocol/protocol_core/: Cargo.toml
protocol/protocol_core/src/: lib.rs
protocol/protocol_derive/: Cargo.toml
protocol/src/: cfb8.rs  client_bound.rs  data_types.rs  deserializer.rs  lib.rs  packets.rs  protocol.rs  serializer.rs  server_bound.rs  tesr.rs  testfile.rs
server_state/: Cargo.toml
server_state/src/: game_settings.rs  lib.rs  player.rs  registry.rs  server.rs
src/: authentication.rs  cfb8.rs  client.rs  commands.rs  entities.rs  glide_server.rs  gui.rs  lobby_server.rs  main.rs  packet.rs  packet_parser.rs  packet_serializer.rs  packet_writer.rs  queue.rs  server.rs  world.rs
src/battle/: cavern.rs  cove.rs  crucible.rs  loot.rs  mod.rs
src/glide/: canyon.rs  cavern.rs  mod.rs  temple.rs
web_interface/: Cargo.toml
web_interface/src/: lib.rs  web_interface.rs
world/: Cargo.toml
world/glide/canyon/: r.-1.2.mca  r.-2.0.mca  r.0.2.mca  r.1.-2.mca  r.1.2.mca
world/region/: r.-1.-1.mca  r.-1.-2.mca  r.-1.1.mca  r.-2.-1.mca  r.-2.-2.mca  r.-2.0.mca  r.-2.1.mca  r.0.-1.mca  r.0.-2.mca  r.0.0-bad.mca  r.0.0.mca  r.0.1.mca  r.1.-1.mca  r.1.-2.mca  r.1.0.mca  r.1.1.mca
world/src/: blocks.rs  chunk.rs  deserializer.rs  lib.rs  materials.rs  sound.rs  tesr.rs  test.rs  world.rs
