[package]
name = "firework-server"
version = "0.1.0"
edition = "2021"

[features]
bundle_world = ["firework/bundle_world"]
log_packets = ["firework/log_packets"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version ="1.21.0", features = ["full"] }
rsa = "0.6.1"
rand = "0.8.5"
reqwest = "0.11.11"
aes = "0.8.1"
cfb8 = "0.8.1"
rsa-der = "0.3.0"
sha1 = "0.10.4"
num-bigint = "0.4.3"
serde_json = "1.0.85"
serde = {version = "1.0.144", features = ["derive"]}
dashmap = "5.4.0"
miniz_oxide = "0.7.1"
byteorder = "1.4.3"
hematite-nbt = "0.5.2"
cipher = "0.4.3"
thiserror = "1.0.37"
tokio-util = "0.7.4"
async-trait = "0.1.58"
modular-bitfield = "0.11.2"
lazy_static = "1.4.0"
firework = { path = "./firework" }
include-flate = { version= "0.2.0", features = ["stable"] }

[profile.release]
# opt-level = 2
# codegen-units = 1
# lto = true
# strip = true  # Automatically strip symbols from the binary.
# opt-level = "z"  # Optimize for size.