[package]
name = "authentication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.11"
serde_json = "1.0.85"
serde = {version = "1.0.144", features = ["derive"]}
num-bigint = "0.4.3"
sha1 = "0.10.4"
thiserror = "1.0.37"
