[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
get-size = "0.1.1"
serde = { version = "1.0.145", features = ["derive"] }

[build]
rustc-wrapper = "/Users/williamheestand/.cargo/bin/sccache"