[package]
name = "firework_data"
version = "0.1.0"
edition = "2021"
build = "src/build/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
hematite-nbt = "0.5.2"
lazy_static = "1.4.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"


[build-dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
convert_case = "0.6.0"
quote = "*"
proc-macro2 = "*"
rust-format = "0.3.4"

[profile.release]
# opt-level = "z"  # Optimize for size.
# strip = true  # Automatically strip symbols from the binary.
# lto = true
# codegen-units = 1