[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.1"
tokio = { version = "1.12.0", features = ["full"] }
miniz_oxide = "0.7.1"
cfb8 = "0.8.1"
modular-bitfield = "0.11.2"
thiserror = "1.0.37"
byteorder = "1.4.3"
minecraft_data = { path = "../firework-data" }
protocol_derive = { path = "./derive" }
protocol_core = { path = "./core" }
authentication = { path = "../firework-authentication" }
hematite-nbt = "0.5.2"
serde = { version = "1.0.144", features = ["derive"] }
reqwest = "0.11.14"
sha1 = "0.10.5"

[profile.dev]
opt-level = 2
