[package]
name = "world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
byteorder = "1.4.3"
hematite-nbt = "0.5.2"
dashmap = "5.4.0"
tokio = "1.21.2"
thiserror = "1.0.38"
protocol = {path = "../firework-protocol"}
protocol_core = {path = "../firework-protocol/core"}
minecraft_data = {path = "../firework-data"}

[profile.release]
opt-level = 3
