[package]
name = "firework_world"
version = "0.1.0"
edition = "2021"

[features]
bundle_world = ["firework_world_loader/bundle_world"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
byteorder = "1.4.3"
hematite-nbt = "0.5.2"
dashmap = "5.4.0"
tokio = "1.21.2"
thiserror = "1.0.38"
firework_protocol = {path = "../firework-protocol"}
firework_protocol_core = {path = "../firework-protocol/core"}
firework_data = {path = "../firework-data"}
firework_world_loader = {path = "./world-loader"}

[profile.release]
opt-level = 3
