[package]
name = "minecraft-data"
version = "0.1.0"
edition = "2021"
build = "src/build/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
hematite-nbt = "0.5.2"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"


[build-dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
convert_case = "0.6.0"
