[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.1"
quartz_nbt = "0.2.6"
tokio = { version = "1.12.0", features = ["full"] }
miniz_oxide = "0.6.2"
cfb-mode = "0.8.2"
cfb8 = "0.8.1"
modular-bitfield = "0.11.2"
thiserror = "1.0.37"
byteorder = "1.4.3"
minecraft_data = { version = "*", path = "../minecraft_data" }
authentication = { version = "*", path = "../authentication" }
async-trait = "0.1.58"
hematite-nbt = "0.5.2"

[profile.dev]
opt-level = 2
