[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.1"
tokio = { version = "1.12.0", features = ["full"] }
miniz_oxide = "0.6.2"
cfb8 = "0.8.1"
modular-bitfield = "0.11.2"
thiserror = "1.0.37"
byteorder = "1.4.3"
minecraft_data = { version = "*", path = "../minecraft_data" }
protocol_derive = { version = "*", path = "./protocol_derive" }
protocol_core = { version = "*", path = "./protocol_core" }
authentication = { version = "*", path = "../authentication" }
hematite-nbt = "0.5.2"

[profile.dev]
opt-level = 2
