[package]
name = "server_state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
serde = { version = "1.0.130", features = ["derive"] }
dashmap = "5.4.0"
rand = "0.8.4"
rsa = "0.6.1"
rsa-der = "0.3.0"