[package]
name = "web_interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
actix-files = "0.6.2"
fs = "0.0.5"
serde_json = "1.0.85"
serde = {version = "1.0.144", features = ["derive"]}
tokio = { version ="1.21.0", features = ["full"] }