[package]
name = "world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quartz_nbt = "0.2.6"
protocol = {path = "../protocol", version = "*"}
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
server_state = {path = "../server_state", version = "*"}
byteorder = "1.4.3"
