[package]
name = "protocol_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.37"
byteorder = "1.4.3"
modular-bitfield = "0.11.2"
minecraft_data = { version = "*", path = "../../minecraft_data" }
hematite-nbt = "0.5.2"
