[package]
name = "protocol_derive"
version = "0.1.0"
edition = "2021"

[lib]
name = "protocol_derive"
path = "src/lib.rs"
proc_macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "*"
syn = { version = "*", features = ["extra-traits"] }
proc-macro2 = "*"
protocol_core = { path = "../protocol_core" }
darling = "0.14.2"
